Add and cleanup data